MFC 318401

Increase the number of LUNs this hardware can support.

Experimentally we know this value works, but the hardware
may support an even higher value.

PR:	213876
Reported by:	J.Catrysse@proximedia.be

Former-commit-id: dd0408d14bdddd23c3a3aadf8c5e5578bab28d00